# llm-project-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  evals.yml
agents/: __init__.py  base.py  harness.py
agents/tools/: registry.py
audit/: __init__.py  event.py  logger.py  sinks.py
cache/: __init__.py  backends.py  semantic.py
core/: __init__.py  client.py  config.py  rate_limiter.py  router.py
docs/superpowers/specs/: 2026-04-12-production-grade-additions-design.md
evals/: runner.py
evals/datasets/: .gitkeep
evals/metrics/: faithfulness.py
guardrails/: __init__.py  _patterns.py  base.py  chain.py  input.py  output.py
observability/: __init__.py  alerts.py  cost.py  tracer.py
prompts/: loader.py
prompts/v1/: system.txt  user.txt
rag/: __init__.py  chunker.py  embedder.py  ingest.py  reranker.py  retriever.py
scripts/: ingest.py  run_evals.py  warmup.py
