[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-project-template"
version = "0.1.0"
description = "Production-ready LLM project template: agents, RAG, evals, observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM clients
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # Config + validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # RAG
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",

    # Evals
    "ragas>=0.2.0",

    # Observability
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
